Fixed but on comparison page. Added luck&grade above materials "dropped by" table changed !ALL! button position on small screens

--- a/sass/components/_gear-options.scss
+++ b/sass/components/_gear-options.scss
@@ -11,35 +11,34 @@
   }
 }
 
-.suffix-adjustment-hold label, .prefix-adjustment-hold label, .grade-adjustment-hold label {
-  font-size: .8em;
-  font-weight: 900;
-  letter-spacing: 1.2px;
-  line-height: 0;
-  margin: 0;
-  padding: 0;
-}
-
 .suffix-adjustment-hold, .prefix-adjustment-hold, .grade-adjustment-hold {
   padding: 0px 8px 4px 8px;
   background: #ccc;
   overflow: hidden;
   width: 75px;
-  display: inline-block;
   text-align: center;
   float: left;
   clear: left;
   margin: 10px 0 0 0;
-}
 
-.suffix-adjustment-hold select, .prefix-adjustment-hold select, .grade-adjustment-hold select {
-  transition: all 0.3s ease;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  clear: both;
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  background: #fff;
-  margin: 0;
+  label {
+    font-size: .8em;
+    font-weight: 900;
+    letter-spacing: 1.2px;
+    line-height: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  select{
+    transition: all 0.3s ease;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    clear: both;
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    background: #fff;
+    margin: 0;    
+  }
 }
